--- a/Web/web/src/components/ui/woods/wood-item/WoodItem.css
+++ b/Web/web/src/components/ui/woods/wood-item/WoodItem.css
@@ -61,7 +61,7 @@
 }
 
 .description{
-  margin: 10px 0;
+  margin:0px !important;
   font-size: 14px;
   line-height: 20px;
 }
@@ -112,7 +112,7 @@
 
 .reaction-wrapper{
   width: 100%;
-  height: 50px;
+  height: 20px!important;
   display: flex;
   margin-top: -20px;
   align-items: center;
