--- a/Web/web/src/components/ui/woods/wood-list/WoodList.css
+++ b/Web/web/src/components/ui/woods/wood-list/WoodList.css
@@ -1,8 +1,6 @@
-body {
-  display: grid;
-  gap: 1rem;
-  grid-auto-flow: column;
-  grid-template-columns: repeat(minmax(min-content, 2rem));
-  
-}
 
+
+.woodlist {
+    max-width: 900px;
+    margin-left: 180px;
+}
