--- a/Web/web/src/screens/user/UserProfileScreen.css
+++ b/Web/web/src/screens/user/UserProfileScreen.css
@@ -9,7 +9,7 @@
 
 .myheader{
   width: 60%;
-  margin:auto;
+  margin-top: 160px;
   transform: translateY(50px);
   padding: 50px 0;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
