--- a/Web/web/src/components/ui/woods/wood-list-profile/WoodListProfile.css
+++ b/Web/web/src/components/ui/woods/wood-list-profile/WoodListProfile.css
@@ -1,7 +1,10 @@
+
+
 .woodListProfile{
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  width: 1400px;
-  grid-gap: 0.5rem
+  grid-template-columns: 480px 480px 0px;
+
 }
+
+
+
