--- a/Web/web/src/components/ui/navbar/Navbar.css
+++ b/Web/web/src/components/ui/navbar/Navbar.css
@@ -96,8 +96,59 @@
 
 }
 
-.imagmy:hover{
+
+/* .imagmy:hover{
   width: 85px;
   height: 85px;
   transform: scale(1.2);
+} */
+
+
+.storynav{
+  border:0;
+  background-color: transparent;
+  cursor: pointer;
+  margin: 0 5px;
+
+
+}
+/* 
+.storynav .profilestorynav{
+ background-color: rgb(255,201,0);
+ background: linear-gradient(36deg, rgb(255,201,0) 13%, rgb(255,0,95) 73%, rgb(255,9,237) 100%);
+ padding: 5px;
+ box-sizing: border-box;
+ width: 120px;
+ height: 120px;
+ border-radius: 50%
+
+} */
+
+.storynav .profilestorynav img{
+  width: 110px;
+  height: 110px;
+  border-radius: 50%;
+  padding:0;
+  margin: 0;
+  border: solid 5px rgb(233, 217, 40);
+
+}
+
+.storynav .profilestorynav img:hover{
+  
+  transition: all 0.5s linear;
+  transform: rotateY(180deg);
+  transform-style: preserve-3d;
+  
+  
+
+}
+
+
+
+
+.story.activenav .profilestorynav{
+  animation-duration: 1s;
+  animation-name: story;
+  animation-iteration-count: infinite;
 }
