--- a/Web/web/src/components/ui/woods/wood-form/WoodForm.css
+++ b/Web/web/src/components/ui/woods/wood-form/WoodForm.css
@@ -1,7 +1,7 @@
 .createwoodbody {
   padding-top: 0px;
   margin: 0;
-  font-family: 'Roboto';
+  font-family: 'Capture';
   /* height: 650px; */
   display: flex;
   justify-content: center;
