--- a/Web/web/src/components/ui/streams/stream-detail/streamDetail.css
+++ b/Web/web/src/components/ui/streams/stream-detail/streamDetail.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: capture;
+  src: url(Capture.ttf);
+}
+
 .mainmi{
   margin-top: 240px;
   width: 60%;
@@ -10,8 +15,9 @@
   width: 800px;
   height: auto;
   background: #fff;
-  border: 1px solid #dfdfdf;
+  border: solid 5px #dcdcdc;
   margin-top: 40px;
+  font-family: Capture;
 }
 
 .info{
