--- a/Web/web/src/components/ui/woods/wood-detail/WoodDetail.css
+++ b/Web/web/src/components/ui/woods/wood-detail/WoodDetail.css
@@ -10,7 +10,7 @@
   width: 800px;
   height: auto;
   background: #fff;
-  border: 1px solid #dfdfdf;
+  border: solid 5px #dcdcdc;
   margin-top: 40px;
 }
 
