--- a/Web/web/src/screens/user/UserProfileScreen.css
+++ b/Web/web/src/screens/user/UserProfileScreen.css
@@ -12,7 +12,7 @@
   margin-top: 160px;
   transform: translateY(50px);
   padding: 50px 0;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family:Capture;
 }
 
 .myperfil-container{
