--- a/Web/web/src/components/ui/account/login/Login.css
+++ b/Web/web/src/components/ui/account/login/Login.css
@@ -20,7 +20,7 @@
 
 
 .formmy {
-  background: #dfdfdf;
+  background: #f8f9fa;
   padding: 40px 0;
   box-shadow: 0 0 16px 0 rgb(67, 100, 94);
   border-radius: 10px;
@@ -36,8 +36,7 @@
 
 .mybtn {
   font-family: Capture;
-  background:radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
-  radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+  background:linear-gradient(to bottom right, rgb(222, 230, 229),rgb(69, 128, 123) ,rgb(5, 4, 4));
   border: none;
   display: block;
   width: 92%;
