--- a/Web/web/src/screens/user/UserProfileScreen.css
+++ b/Web/web/src/screens/user/UserProfileScreen.css
@@ -19,11 +19,27 @@
   display: flex;
 }
 
+
+
 .myperfil-container img{
   height: 250px;
   width:250px;
   border-radius: 50%;
-  cursor: pointer
+  padding:0;
+  margin: 0;
+  cursor: pointer;
+  border: solid 5px #eec707;
+
+}
+
+.myperfil-container img:hover{
+  
+  transition: all 0.5s linear;
+  transform: rotateY(180deg);
+  transform-style: preserve-3d;
+  
+  
+
 }
 
 .contenedor-cabecera{
