--- a/Web/web/src/screens/home/HomeScreen.css
+++ b/Web/web/src/screens/home/HomeScreen.css
@@ -51,6 +51,7 @@ body {
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
   border: solid 5px #dcdcdc;
+  overflow: auto;
 
 }
 
