--- a/Web/web/src/components/ui/navbar/Navbar.css
+++ b/Web/web/src/components/ui/navbar/Navbar.css
@@ -55,6 +55,9 @@
   color: #C5B358;
 
 }
+.logout:hover{
+  color: #C5B358;
+}
 
 .logomy-section {
   /* font-family: Brush Script MT, Brush Script Std; */
