--- a/Web/web/src/components/ui/streams/stream-detail/streamDetail.css
+++ b/Web/web/src/components/ui/streams/stream-detail/streamDetail.css
@@ -158,3 +158,7 @@
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
   background: linear-gradient(to bottom right, rgb(222, 230, 229),rgb(69, 128, 123) ,rgb(5, 4, 4));
 } */
+
+.imgdetail{
+  height: 72px;
+}
