--- a/Web/web/src/screens/home/HomeScreen.css
+++ b/Web/web/src/screens/home/HomeScreen.css
@@ -74,7 +74,14 @@ body {
  border-radius: 50%
 
 }
-
+.mistory{
+  width: 110px;
+  height: 110px;
+  border-radius: 50%;
+  padding:0;
+  margin: 0;
+  border: solid 5px rgb(212, 215, 209);
+}
 .story .profilestory img{
   width: 110px;
   height: 110px;
@@ -83,6 +90,13 @@ body {
   margin: 0;
   border: solid 5px rgb(212, 215, 209);
 
+}
+
+.mistory:hover{
+  transition: all 0.5s linear;
+  transform: rotateY(180deg);
+  transform-style: preserve-3d;
+  
 }
 
 .story .profilestory img:hover{
@@ -95,6 +109,12 @@ body {
 
 }
 
+.new{
+  text-align: center;
+  padding: 5px 0px;
+  font-family: Capture;
+}
+
 .story .titlestory{
   text-align: center;
   padding: 5px 0px;
@@ -103,8 +123,16 @@ body {
 
 }
 
+.mistory{
+  /* background: linear-gradient(36deg, rgb(255,201,0) 13%, rgb(255,0,95) 73%, rgb(255,9,237) 100%); */
+  padding: 5px;
+  box-sizing: border-box;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+}
 
-.story.active .profilestory{
+.story.active .profilestory .mistory{
   animation-duration: 1s;
   animation-name: story;
   animation-iteration-count: infinite;
