--- a/Web/web/src/screens/user/UserProfileScreen.css
+++ b/Web/web/src/screens/user/UserProfileScreen.css
@@ -29,6 +29,9 @@
   margin: 0;
   cursor: pointer;
   border: solid 5px #eec707;
+  background: linear-gradient(36deg, rgb(255,201,0) 13%, rgb(255,0,95) 73%, rgb(255,9,237) 100%);
+  padding: 5px;
+  box-sizing: border-box;
 
 }
 
