--- a/Web/web/src/components/ui/woods/wood-detail/WoodDetail.css
+++ b/Web/web/src/components/ui/woods/wood-detail/WoodDetail.css
@@ -142,6 +142,12 @@
   color:rgb(20, 220, 127);
 }
 
+.fa-fire-flame-curved{
+  margin-top:12px;
+  margin-bottom:12px;
+  color:rgb(220, 20, 30);
+}
+
 .dumb{
   margin-top:12px;
   margin-bottom:12px;
