the end by the moment

--- a/Web/web/src/components/ui/woods/wood-form/WoodForm.css
+++ b/Web/web/src/components/ui/woods/wood-form/WoodForm.css
@@ -25,3 +25,35 @@
   border-bottom-left-radius: 10px;
   align-items: center;
 }
+
+/* .logingroup{
+  background-color: #a09e97;
+}
+
+
+
+input{
+  background-color: #CFBD7D!important;
+} */
+
+/* input[type=text] {
+  border-radius: 4px;
+  background-color: #CFBD7D!important;
+  color: white;
+} */
+
+/* .loginemail{
+  background-color:  #CFBD7D!important;
+} */
+/* .placeholder{
+  border-radius: 4px;
+  background-color: #CFBD7D!important;
+  color: white;
+} */
+
+/* .form-control{
+  color: red
+} */
+
+
+
